# plover-clipboard

./: README.md  plover_clipboard.py  setup.cfg
