[metadata]
name = plover_clipboard
version = 1.0
description = Plover plugin for accessing the system clipboard
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/sammdot/plover-clipboard
keywords = plover plover_plugin
classifiers =
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
zip_safe = True
setup_requires =
  setuptools>=30.3.0
install_requires =
  plover>=4.0.0.dev8
  pyperclip>=1.8
py_modules =
  plover_clipboard

[options.entry_points]
plover.meta =
  clipboard_paste = plover_clipboard:paste
